refactor: streamline collection handling and improve logging in services